# diy-dna-ancestry

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.sh
dna/: __init__.py  admixture.py  cli.py  download.py  init_env.py  merge.py  pca.py  plot.py  qc.py
tests/: test_init_env.py  test_qc.py
tests/fixtures/: test_sample.vcf
