[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "diy-dna-ancestry"
version = "0.1.0"
description = "A CLI tool for personal DNA ancestry analysis using HGDP, PLINK, ADMIXTURE, and PCA."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "diy-dna-ancestry contributors" }]
readme = "README.md"
keywords = ["genomics", "ancestry", "admixture", "pca", "plink", "hgdp", "vcf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# NOTE: 运行时依赖由 environment.yml（conda）管理，
#       此处仅声明 pip install -e . 所需的最小集合。
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "click>=8.1",
    "rich>=13.7",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dna = "dna.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dna*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
